cmake_minimum_required(VERSION 3.22)
project(ElectricVehicleRouting)

set(CMAKE_CXX_STANDARD 14)

add_executable(ElectricVehicleRouting main.cpp ChargingStation.cpp ChargingStation.h NextChargingStation.cpp NextChargingStation.h DirectedGraphForChargingStations.cpp DirectedGraphForChargingStations.h ElectricVehicle.cpp ElectricVehicle.h OptimalTimeDijkstra.cpp OptimalTimeDijkstra.h ChargerType.h DirectedGraphForIntersections.cpp DirectedGraphForIntersections.h Intersection.cpp Intersection.h ShortestDistanceDijkstra.cpp ShortestDistanceDijkstra.h)
